--- a/owl/assets/owl.carousel.css
+++ b/owl/assets/owl.carousel.css
@@ -114,9 +114,9 @@
   user-select: none;
 }
 .owl-carousel .owl-item img {
-  display: block;
+  /*display: block;
   width: 100%;
-  -webkit-transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;*/
 }
 .owl-carousel.owl-text-select-on .owl-item {
   -webkit-user-select: auto;
